# Projet2_Cinema_Creuse

./: Accueil.py  Machine-Learning-NN.ipynb  Netoyage-art-essaie.ipynb  Traduction.ipynb  Traitement_df.ipynb  afcae_films_recommandes_1960_2027.csv  df_final  df_final.py  df_final_genre.csv  df_final_web_acteur.csv  pyproject.toml  resultats_cinema_.xlsb  tconst_film.csv  testaide.py  testkernel copy.ipynb  testkernel.ipynb  testmax.ipynb
.streamlit/: config.toml
pages/: 01_Films_Grand_Public.py  01_Recommandation_cinema.py  01_Recommandation_cinema_BACKUP_666.py  01_Recommandation_cinema_LOCAL_666.py  02_Films_Art_Essais.py  03_Chiffres clés.py  03_Chiffres_cles.py  03_Chiffres_clés.py  KPI.py  Recommandation_cinema.py
